# faces.guru

./: .gitignore  README.md  ROADMAP.md
backend/: .env.example  .gitignore  Cargo.toml
backend/services/: faceswap_service.py  video_service.py
backend/src/: config.rs  db.rs  error.rs  imageutil.rs  main.rs  models.rs
backend/src/api/: describe.rs  jobs.rs  media.rs  mod.rs  presets.rs  prompt.rs
backend/src/clients/: comfyui.rs  faceswap.rs  lmstudio.rs  mod.rs  videosvc.rs
backend/src/worker/: image.rs  mod.rs  swap.rs  video.rs
client/: capacitor.config.json  index.html  package-lock.json  package.json  vite.config.js
client/src/: api.js  main.js  styles.css  ui.js
client/src/views/: describe.js  gallery.js  generate.js  settings.js  swap.js  video.js
