[package]
name = "facesguru-backend"
version = "0.1.0"
edition = "2021"
description = "Local-only job API + worker for the faces.guru NSFW AI app (runs on the Mac M5)."

[dependencies]
axum = { version = "0.7", features = ["multipart", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
image = { version = "0.25", default-features = false, features = ["png", "gif"] }
base64 = "0.22"
dotenvy = "0.15"

[profile.dev]
opt-level = 0
